Tue Sep 23 17:41:15 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* text.c: fix minor \n output bug

Tue Sep 23 17:29:17 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, render.c, pixmaps/Makefile.am: fix a few minor without
	gtk issues

Tue Sep 23 12:44:36 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkboard.c, gtkboard.h,
	gtkoptions.c, set.c: add option to disable boardgraying

Sun Sep 29 19:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>
	* gtkboard.c, render.c: Attempt to gray board in edit mode

Mon Sep 15 21:20:28 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, pixmaps/Makefile.am: allow building even if
	gdk-pixbuf-csource is not found

Sun Sep 14 22:32:57 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* : update danish translation and adjust a few strings

Thu Sep  4 15:18:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtk-multiview.[ch]: port to g_object

Tue Sep  2 23:05:52 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkcolour.c, gtkcolour.h, gtkprefs.c, gtkprefs.h,
	board3d/gtkcolour3d.c, board3d/misc3d.h, board3d/inc3d.h: use the
	gtk_color_button, rather than designing our own.

Tue Aug 12 19:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* board3d files, removed total.bmp: Replace totoal.bmp with text in graph

Mon Aug 11 10:48:21 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gnubgmodule.c, gtkcube.c, gtkgame.c, gtkgamelist.c, set.c:
	update a few strings for translation.

Sun Aug 10 01:35:06 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtktempmap.c: improve a bit on  printing of equties and best moves

Thu Aug  7 15:28:33 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in: add options to disable deprecated glib/gtk functions
	* gtkgame.c, gtktempmap.c: replace gtk_object_weakref with
	g_object_weakref

Thu Aug  7 15:19:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* board3d/gtkcolour3d.c: replace a gtk_combo with a gtk_combo_box